kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medimitra-backend
  labels:
    app: backend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mrinal672/medimitra-backend
        ports:
        - containerPort: 80
