kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medimitra-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mrinal672/medimitra-frontend
        ports:
        - containerPort: 80
